manifests/service-925e.yml
apiVersion: v1
kind: Service
metadata:
    name: "bishalbugbashaks-12de"
    labels:
        app: "bishalbugbashaks-12de"
spec:
    type: ClusterIP
    ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
    selector:
        app: "bishalbugbashaks-12de"
