manifests/service-d7dd.yml
apiVersion: v1
kind: Service
metadata:
    name: "bishalbugbashaks-fccf"
    labels:
        app: "bishalbugbashaks-fccf"
spec:
    type: ClusterIP
    ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
    selector:
        app: "bishalbugbashaks-fccf"
