manifests/service.yml
apiVersion: v1
kind: Service
metadata:
    name: bishalbugbashaks
    labels:
        app: bishalbugbashaks
spec:
    type: LoadBalancer
    ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
    selector:
        app: bishalbugbashaks
