manifests/ingress-d7dd.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: "bishalbugbashaks-fccf"
    labels:
        app: "bishalbugbashaks-fccf"
    annotations:
        kubernetes.io/ingress.class: addon-http-application-routing
spec:
    rules:
        - host: bishalbugbashaksc5e2-bishalbugbashaks-fccf.01d4a105bd4546febc77.southindia.aksapp.io
          http:
            paths:
            - path: /
              backend:
                serviceName: "bishalbugbashaks-fccf"
                servicePort: 80
